product, contact, cart, login-signup, json

--- a/cart.html
+++ b/cart.html
@@ -86,8 +86,8 @@
     </table>
   </div>
 
-  <div class="orderInfor row">
-    <div class="formInfor col-md-6">
+  <div class="orderFormInfor row">
+    <div class="formInfor col-md-6" style="margin: 10px 0 20px 0">
       <form action="" class="form" id="formInfor">
         <h2 for="" class="">Your Information</h2>
         <input
@@ -119,7 +119,7 @@
       </form>
     </div>
 
-    <div class="orderInfor col-md-6 pb-3">
+    <div class="orderInfor col-md-6 pb-3" style="margin: 10px 0 0 0">
       <h2>Order Information</h2>
       <div class="tableOrder">
         <div class="row" ng-repeat="eachProduct in listOfCart">
