--- a/aboutUs.html
+++ b/aboutUs.html
@@ -33,7 +33,7 @@
   .revealOfAboutUsPage.left-member {
     position: relative;
     opacity: 0;
-    transform: translateX(-200px);
+    transform: translateY(150px);
     transition: all 2s ease;
   }
   .revealOfAboutUsPage.left-member.active {
@@ -43,7 +43,7 @@
   .revealOfAboutUsPage.right-member {
     position: relative;
     opacity: 0;
-    transform: translateX(200px);
+    transform: translateY(150px);
     transition: all 2s ease;
   }
   .revealOfAboutUsPage.right-member.active {
