--- a/cart.html
+++ b/cart.html
@@ -3,6 +3,7 @@
     vertical-align: middle;
   }
   .cartContent {
+    min-height: 60vh;
     background-image: linear-gradient(
       45deg,
       rgb(253, 158, 255),
@@ -88,12 +89,12 @@
 
   <div class="orderFormInfor row">
     <div class="formInfor col-md-6" style="margin: 10px 0 20px 0">
-      <form action="" class="form" id="formInfor">
+      <form action="" class="form" id="formInfor" ng-submit="orderSuccess()">
         <h2 for="" class="">Your Information</h2>
         <input
           class="form-control p-2 my-2 mx-auto"
           type="text"
-          pattern="\w{1}[\d\w\s]{1,20}"
+          pattern="[A-Za-z1-9]{2,10}[A-Za-z1-9 ]{2,10}"
           required
           placeholder="Enter Your Name"
         />
@@ -102,6 +103,7 @@
           type="email"
           placeholder="Enter Your Email"
           required
+          pattern="^([0-9a-zA-Z]([-.\w]*[0-9a-zA-Z])*@([0-9a-zA-Z][-\w]*[0-9a-zA-Z]\.)+[a-zA-Z]{2,9})$"
         />
         <input
           class="form-control p-2 my-2 mx-auto"
