--- a/cart.html
+++ b/cart.html
@@ -1,4 +1,11 @@
 <style>
+  h2,
+  td {
+    font-family: "Kaushan Script", cursive;
+  }
+  input {
+    font-family: "Lobster", cursive;
+  }
   td.PQTR {
     vertical-align: middle;
   }
@@ -94,7 +101,7 @@
         <input
           class="form-control p-2 my-2 mx-auto"
           type="text"
-          pattern="[A-Za-z1-9]{2,10}[A-Za-z1-9 ]{2,10}"
+          pattern="[A-Za-z]+"
           required
           placeholder="Enter Your Name"
         />
