--- a/contactUs.html
+++ b/contactUs.html
@@ -1,5 +1,14 @@
 <style>
+  h1,
+  legend,
+  button[type="submit"] {
+    font-family: "Kaushan Script", cursive;
+  }
+  .contact-info {
+    font-family: "Lobster", cursive;
+  }
   input {
+    font-family: "Lobster", cursive;
     margin: 5px 0 5px 0;
   }
   .contactUsContent {
