--- a/home.html
+++ b/home.html
@@ -1,4 +1,13 @@
 <style>
+  .row,
+  input[type="button"],
+  button[type="button"],
+  h4.modal-title {
+    font-family: "Kaushan Script", cursive;
+  }
+  .describe {
+    font-family: "Lobster", cursive;
+  }
   .liveshow2,
   .liveshow1,
   .album1,
@@ -14,7 +23,7 @@
     justify-content: center;
   }
   h1.title {
-    font-size: 3vw;
+    font-family: "Kaushan Script", cursive;
     margin-bottom: 30px;
   }
 
