--- a/index.html
+++ b/index.html
@@ -14,11 +14,27 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
     <style>
+      @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kaushan+Script&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&family=Raleway:wght@600&display=swap");
+
       a.nav-link {
         color: rgb(101, 101, 101);
       }
+
       a.nav-link:hover {
         color: black;
+      }
+
+      h1,
+      li a {
+        font-family: "Kaushan Script", cursive;
+      }
+
+      p {
+        font-family: "Lobster", cursive;
+      }
+      .copyright {
+        font-family: "Times New Roman", Times, serif;
       }
     </style>
   </head>
@@ -168,7 +184,7 @@
                 <ul class="list-unstyled list-inline">
                   <li>
                     <a href="" class="text-white" style="text-decoration: none"
-                      >CD</a
+                      >Tape</a
                     >
                   </li>
                   <li>
@@ -374,10 +390,6 @@
 
     <link src="index.css" />
     <script src="index.js"></script>
-    <style>
-      .copyright {
-        font-family: "Times New Roman", Times, serif;
-      }
-    </style>
+    <style></style>
   </body>
 </html>
