--- a/product.html
+++ b/product.html
@@ -1,4 +1,16 @@
 <style>
+  h4.d-flex,
+  button[type="button"],
+  .right-content,
+  h3,
+  h5,
+  p,
+  input[type="button"] {
+    font-family: "Kaushan Script", cursive;
+  }
+  .describe {
+    font-family: "Lobster", cursive;
+  }
   .container {
     display: flex;
     justify-content: flex-start;
@@ -64,8 +76,7 @@
   h4.pi {
     margin: 5px 0 10px 30px;
     color: rgb(44, 6, 81);
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-      "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-family: "Kaushan Script", cursive;
   }
   .Btn-close {
     font-size: 2.3vw;
