--- a/cart.html
+++ b/cart.html
@@ -17,6 +17,10 @@
       rgb(155, 237, 255)
     );
   }
+  .icon-tabler-trash:hover,
+  .icon-tabler-trash::after {
+    color: red;
+  }
 </style>
 
 <div class="container-fluid cartContent" ng-controller="cart">
