--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
       a.nav-link {
         color: rgb(101, 101, 101);
+        background-color: blue;
       }
 
       a.nav-link:hover {
@@ -389,7 +390,6 @@
       <!-- END FOOTER -->
     </div>
 
-    <link src="index.css" />
     <script src="index.js"></script>
     <style></style>
   </body>
