--- a/index.html
+++ b/index.html
@@ -37,6 +37,25 @@
       .copyright {
         font-family: "Times New Roman", Times, serif;
       }
+      #btn-back-to-top {
+        background-color: rgb(255, 136, 136);
+        border: none;
+        border-radius: 10px;
+        padding: 5px 15px 5px 15px;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        display: none;
+      }
+      #btn-back-to-top:hover {
+        transition: 0.3s;
+        background-color: rgb(255, 57, 57);
+      }
+      .btnScrollCt {
+        align-content: center;
+        justify-content: center;
+        vertical-align: middle;
+      }
     </style>
   </head>
   <body>
@@ -169,6 +188,33 @@
         ng-include="'home.html'"
         ng-style="originalHome"
       ></div>
+      <div class="buttonScrollUp">
+        <button
+          type="button"
+          class="Btn btn-floating btn-lg"
+          id="btn-back-to-top"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-arrow-big-top"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            stroke-width="1.25"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path
+              d="M9 20v-8h-3.586a1 1 0 0 1 -.707 -1.707l6.586 -6.586a1 1 0 0 1 1.414 0l6.586 6.586a1 1 0 0 1 -.707 1.707h-3.586v8a1 1 0 0 1 -1 1h-4a1 1 0 0 1 -1 -1z"
+            ></path>
+          </svg>
+
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
       <!-- END PAGE CONTENT -->
 
       <!-- FOOTER -->
