--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <div class="section" ng-view style="min-height: 60vh"></div>
       <div
         class="section"
-        ng-include="'home.html'"
+        ng-include="'./home.html'"
         ng-style="originalHome"
       ></div>
       <div class="buttonScrollUp">
