add button scroll up

--- a/index.html
+++ b/index.html
@@ -185,7 +185,8 @@
       <div class="section" ng-view style="min-height: 60vh"></div>
       <div
         class="section"
-        ng-include="'./home.html'"
+        ng-include
+        src="'./home.html'"
         ng-style="originalHome"
       ></div>
       <div class="buttonScrollUp">
