--- a/index.html
+++ b/index.html
@@ -26,17 +26,13 @@
         color: black;
       }
 
+      .copyright,
       h1,
+      p,
       li a {
-        font-family: "Kaushan Script", cursive;
-      }
-
-      p {
-        font-family: "Lobster", cursive;
-      }
-      .copyright {
         font-family: "Times New Roman", Times, serif;
       }
+
       #btn-back-to-top {
         background-color: rgb(255, 136, 136);
         border: none;
