--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                       <path d="M17 17h-11v-14h-2"></path>
                       <path d="M6 5l14 1l-1 7h-13"></path>
                     </svg>
+                    <!-- <sub>1</sub>  -->
                     Cart</a
                   >
                 </li>
