--- a/logInSignUp.html
+++ b/logInSignUp.html
@@ -138,6 +138,7 @@
   >
     <div class="col-12 welcomeText">
       <h1>Welcome {{userName}} !</h1>
+      <button>Log Out</button>
     </div>
   </div>
 </div>
