--- a/cart.html
+++ b/cart.html
@@ -1,7 +1,9 @@
 <style>
-  h2,
-  td {
+  h2 {
     font-family: "Kaushan Script", cursive;
+  }
+  td > p {
+    font-size: 3vw;
   }
   input {
     font-family: "Lobster", cursive;
@@ -29,11 +31,11 @@
     <table class="table">
       <thead>
         <tr>
-          <td>PRODUCT</td>
-          <td>PRICE</td>
-          <td>QUANTITY</td>
-          <td>TOTAL</td>
-          <td>REMOVE</td>
+          <td><p>PRODUCT</p></td>
+          <td><p>PRICE</p></td>
+          <td><p>QUANTITY</p></td>
+          <td><p>TOTAL</p></td>
+          <td><p>REMOVE</p></td>
         </tr>
       </thead>
       <tbody>
