--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
       a.nav-link:hover {
         color: black;
       }
+
+      .copyright,
+      h1,
+      p,
+      a.nav-link {
+        font-family: "Times New Roman", Times, serif;
+      }
+
       #btn-back-to-top {
         background-color: rgb(255, 136, 136);
         border: none;
