--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,3 +1,4 @@
+<!-- STYLE OF ABOUT US PAGE -->
 <style>
   h3.text-uppercase,
   h1 {
@@ -59,7 +60,11 @@
     transform: translateX(0);
   }
 </style>
+<!-- END STYLE OF ABOUT US PAGE -->
+
+<!-- ABOUT US PAGE CONTENT -->
 <div class="container-fluid aboutUsContent" style="padding: 0 0 200px 0">
+  <!-- INTRODUCE ABOUT RHYTHM HOUSE -->
   <div class="about-rhythmHouse text-center w-100">
     <div class="row justify-content-center">
       <div class="image col-12">
@@ -81,7 +86,9 @@
       </div>
     </div>
   </div>
+  <!-- END INTRODUCE ABOUT RHYTHM HOUSE -->
 
+  <!-- INTRODUCE ABOUT TEAM MEMBER -->
   <div class="about-teamMember text-center">
     <div class="textMember revealOfAboutUsPage" style="margin-bottom: 50px">
       <h3 class="text-uppercase mt-5 py-3">Member</h3>
@@ -120,4 +127,6 @@
       </div>
     </div>
   </div>
+  <!-- END INTRODUCE ABOUT TEAM MEMBER -->
 </div>
+<!-- END ABOUT US PAGE CONTENT -->
