--- a/blog.html
+++ b/blog.html
@@ -1,3 +1,4 @@
+<!-- STYLE OF BLOG PAGE -->
 <style>
   h1.title {
     font-family: "Kaushan Script", cursive;
@@ -56,11 +57,15 @@
     opacity: 1;
   }
 </style>
+<!-- END STYLE OF BLOG PAGE -->
 
+<!-- BLOG PAGE CONTENT -->
 <div class="container-fluid membershipPage left" id="mbs">
   <div class="container-fluid content-child d-flex text-center">
     <h1>THERE ARE SOME UPCOMING LIVESHOW AND CONTEXT</h1>
   </div>
+
+  <!-- LIVE SHOW -->
   <div class="content-child">
     <div class="col-12 row text-start mt-5">
       <h1
@@ -129,6 +134,9 @@
       </div>
     </div>
   </div>
+  <!-- END LIVE SHOW -->
+
+  <!-- CONTEXT -->
   <div class="content-child row text-end mt-3" style="margin-bottom: 200px">
     <h1
       class="title"
@@ -194,4 +202,6 @@
       </div>
     </div>
   </div>
+  <!-- END CONTEXT -->
 </div>
+<!-- END BLOG PAGE CONTENT -->
