--- a/contactUs.html
+++ b/contactUs.html
@@ -1,3 +1,4 @@
+<!-- STYLE OF CONTACT US PAGE -->
 <style>
   h1,
   legend,
@@ -52,8 +53,11 @@
     border-radius: 10px;
   }
 </style>
+<!-- END STYLE OF CONTACT US PAGE -->
 
+<!-- CONTACT US PAGE CONTENT -->
 <div class="contactUsContent container-fluid">
+  <!-- CONTACT INFOMATION -->
   <div class="content1 row text-center">
     <h1>Contact Us</h1>
     <div class="row threeContact">
@@ -126,8 +130,12 @@
       </div>
     </div>
   </div>
+  <!-- END CONTACT INFOMATION -->
+
+  <!-- MAP AND CONTACT FORM -->
   <div class="content2 row py-5">
     <div class="revealOfContactUsPage mapAndForm row">
+      <!-- MAP -->
       <div class="map col-md-6 col-12">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.3192813976666!2d106.66369937422283!3d10.786840059003271!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752ed2392c44df%3A0xd2ecb62e0d050fe9!2zRlBUIEFwdGVjaCBIQ00gLSBI4buHIFRo4buRbmcgxJDDoG8gVOG6oW8gTOG6rXAgVHLDrG5oIFZpw6puIFF14buRYyBU4bq_IChTaW5jZSAxOTk5KQ!5e0!3m2!1svi!2s!4v1669299607211!5m2!1svi!2s"
@@ -138,7 +146,9 @@
         >
         </iframe>
       </div>
+      <!-- END MAP -->
 
+      <!-- CONTACT FORM -->
       <div class="form col-md-6 col-12 text-md-start text-center mt-md-0 mt-5">
         <form action="" class="form" ng-submit="">
           <legend>GET IN TOUCH</legend>
@@ -189,6 +199,8 @@
           </button>
         </form>
       </div>
+      <!-- END CONTACT FORM -->
     </div>
   </div>
+  <!-- END MAP AND CONTACT FORM -->
 </div>
