--- a/membership.html
+++ b/membership.html
@@ -1,3 +1,4 @@
+<!-- STYLE OF MEMBERSHIP PAGE -->
 <style>
   h3,
   h4,
@@ -142,10 +143,14 @@
     transform: translateY(0);
   }
 </style>
+<!-- END STYLE OF MEMBERSHIP PAGE -->
 
+<!-- MEMBERSHIP PAGE CONTENT -->
 <div class="container-fluid" ng-controller="membership">
   <div class="membershipContent row">
+    <!-- IMAGE AND POINT CALCULATION -->
     <div class="left-infor col-12">
+      <!-- IMAGE -->
       <div class="member-image" style="margin: 12vh 0 200px 0">
         <img
           src="image/member.jpg"
@@ -153,7 +158,9 @@
           class="memmber-img img-fluid rounded my-3"
         />
       </div>
+      <!-- END IMAGE -->
 
+      <!-- POINT CALCULATION -->
       <div class="cal-point">
         <div class="benefit revealOfMembershipPage">
           <div class="b-dntf mb-3">
@@ -188,7 +195,11 @@
           </ul>
         </div>
       </div>
+      <!-- END POINT CALCULATION -->
     </div>
+    <!-- END IMAGE AND POINT CALCULATION -->
+
+    <!-- REGISTRY -->
     <div class="right-infor col-12 py-3">
       <div
         class="notMember revealOfMembershipPage"
@@ -200,5 +211,7 @@
         </a>
       </div>
     </div>
+    <!-- END REGISTRY -->
   </div>
 </div>
+<!-- END MEMBERSHIP PAGE CONTENT -->
