--- a/product.html
+++ b/product.html
@@ -1,3 +1,4 @@
+<!-- STYLE OF PRODUCT PAGE -->
 <style>
   h4.d-flex,
   button[type="button"],
@@ -165,9 +166,13 @@
     transition: 0.2s;
   }
 </style>
+<!-- END STYLE OF PRODUCT PAGE -->
 
+<!-- PRODUCT PAGE CONTENT -->
 <div class="container-fluid" ng-controller="product">
+  <!-- PRODUCT AND FILTER -->
   <div class="content row">
+    <!-- PRODUCT -->
     <div class="left-content col-sm-9 col-7 row">
       <div
         class="image_1 col-md-4 col-sm-6 col-12 my-3"
@@ -194,7 +199,9 @@
         </div>
       </div>
     </div>
+    <!-- END PRODUCT -->
 
+    <!-- FILTER -->
     <div class="right-content col-sm-3 col-5 mb-3">
       <div class="col-12">
         <div class="row px-2 pt-2 text-center justify-items-center">
@@ -324,8 +331,11 @@
         </div>
       </div>
     </div>
+    <!-- END FILTER -->
   </div>
-  <!-- manual Modal -->
+  <!-- END PRODUCT AND FILTER -->
+
+  <!-- MANUAL MODEL -->
   <div class="Modal mt-md-5" ng-style="manualModal">
     <div class="Modal__overlay"></div>
     <div class="Modal-content">
