--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rhythm Houses</title>
+
+    <!-- External Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-animate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-route.js"></script>
@@ -14,6 +16,8 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Style of index page -->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kaushan+Script&display=swap");
       @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&family=Raleway:wght@600&display=swap");
@@ -172,15 +176,11 @@
           </div>
         </nav>
       </div>
-      <!-- END HEADER MENU FOR PC -->
-
-      <!-- HEADER MENU FOR MOBILE -->
-      <div class="header-mobile"></div>
-      <!-- END HEADER MENU FOR MOBILE -->
 
       <!-- PAGE CONTENT -->
       <div class="section" ng-view style="min-height: 60vh"></div>
 
+      <!-- SCROLL UP BUTTON -->
       <div class="buttonScrollUp">
         <button
           type="button"
@@ -208,6 +208,7 @@
           <i class="fas fa-arrow-up"></i>
         </button>
       </div>
+      <!-- END SCROLL UP BUTTON -->
       <!-- END PAGE CONTENT -->
 
       <!-- FOOTER -->
@@ -440,7 +441,7 @@
       <!-- END FOOTER -->
     </div>
 
+    <!-- Embed main js file -->
     <script src="index.js"></script>
-    <style></style>
   </body>
 </html>
