--- a/logInSignUp.html
+++ b/logInSignUp.html
@@ -1,3 +1,4 @@
+<!-- STYLE OF LOGIN-SIGNUP PAGE -->
 <style>
   button {
     font-family: "Kaushan Script", cursive;
@@ -75,8 +76,13 @@
     background-color: red;
   }
 </style>
+<!-- END STYLE OF LOGIN-SIGNUP PAGE -->
+
+<!-- LOGIN-SIGNUP PAGE CONTENT -->
 <div class="container-fluid logInSignUpContent" ng-controller="logInSignUpPage">
+  <!-- LOGIN AND SIGNUP -->
   <div class="formlas row" ng-style="form">
+    <!-- LOGIN -->
     <div class="left col-md-6 col-12 my-5 text-center">
       <form action="#!logInSignUp" class="form-control" ng-submit="LogIn()">
         <div class="row">
@@ -105,6 +111,9 @@
         </div>
       </form>
     </div>
+    <!-- END LOGIN -->
+
+    <!-- SIGN UP -->
     <div class="right col-md-6 col-12 my-5 text-center">
       <form action="#!logInSignUp" class="form-control" ng-submit="SignUp()">
         <div class="row">
@@ -142,7 +151,11 @@
         </div>
       </form>
     </div>
+    <!-- END SIGNUP -->
   </div>
+  <!-- END LOGIN AND SIGNUP -->
+
+  <!-- WELCOME -->
   <div
     class="welcome container-fluid justify-content-center text-center row"
     ng-style="welcome"
@@ -152,4 +165,6 @@
       <button ng-click="LogOut()" class="Btn-logOut">Log Out</button>
     </div>
   </div>
+  <!-- END WELCOME -->
 </div>
+<!-- LOGIN-SIGNUP PAGE CONTENT -->
